sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: not found: value lgh
	for (i<-0 to lgh-2){
                     ^AlgBubbleSort1:11: error: type mismatch;
 found   : Unit
 required: Boolean
}while (swap=true)
            ^